# notebooks

./: .gitignore  .pre-commit-config.yaml  Introduction to spikes with PyTorch.ipynb  Quantization.ipynb  README.html  README.ipynb  README.md  _config.yml  _toc.yml  edge_detector.html  edge_detector.md  encoding.ipynb  flake.nix  genindex.html  high-performance-computing.html  high-performance-computing.ipynb  high-performance-computing.md  intro_encoding.html  intro_encoding.ipynb  intro_norse.html  intro_norse.ipynb  intro_norse.md  intro_plotting.html  intro_plotting.ipynb  intro_plotting.md  intro_spikes.html  intro_spikes.ipynb  intro_spikes.md  intro_visualization.ipynb  introduction-to-norse.ipynb  jupytext.toml  mnist_classifiers.html  mnist_classifiers.ipynb  mnist_classifiers.md  norse_tutorial.ipynb  objects.inv  parameter-learning.html  parameter-learning.ipynb  parameter-learning.md  poker-dvs_classifier.html  (+17 more)
.github/workflows/: documentation_build.yml  documentation_publish.yml
_sources/: README.ipynb  README.md  edge_detector.ipynb  edge_detector.md  high-performance-computing.ipynb  intro_norse.ipynb  intro_plotting.ipynb  mnist_classifiers.md  parameter-learning.ipynb  poker-dvs_classifier.ipynb  poker-dvs_classifier.md  single-neuron-experiments.ipynb  single-neuron-experiments.md  stp_example.ipynb
book/: index.md
notebooks/: Readme.md
