[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Jens E. Pedersen <jeped@kth.se>"]
license = "LGPL3"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.0"
jupyter = "^1.0.0"
norse = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
